--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,32 @@
-<div class="container pt-4">
+<div class="container mt-5 p-5 shadow bg-white">
   <div class="row">
-    <button class="btn btn-dark">click me</button>
+    <h3>Recording Demo</h3>
+  </div>
+
+  <div class="row mb-3">
+    This is a demo meant to demonstrate recording the user interactions for BI purposes.<br/>
+    What to do:
+  </div>
+
+  <div class="row">
+    <ul class="list-group">
+      <li class="list-group-item">Click on "Start Recording"</li>
+      <li class="list-group-item">Write some random things in the input</li>
+      <li class="list-group-item">Click on the "Stop Recording And Replay"</li>
+    </ul>
+  </div>
+</div>
+
+<div class="container mt-3 bg-white shadow p-5 mb-5">
+  <div class="row mb-3">
+    <button class="btn btn-dark" (click)="startRecording()">start recording</button>
   </div>
 
   <div class="row form-group">
-    <label for="randomInput">label</label>
-    <input id="randomInput" class="form-control">
+    <input title="some random text" placeholder="enter some random text" class="form-control">
   </div>
 
   <div class="row">
-    <button class="btn btn-dark m-1" (click)="startRecording()">start</button>
-    <button class="btn btn-dark m-1" (click)="saveEvents()">stop</button>
-  </div>
-
-  <div class="row">
-    <app-replay></app-replay>
+    <app-replay [events]="events" [stopRecordingCallback]="stopCallback"></app-replay>
   </div>
 </div>
