--- a/src/app/replay/replay.component.html
+++ b/src/app/replay/replay.component.html
@@ -1,3 +1,3 @@
+<button class="btn btn-dark mb-3" (click)="replay(replayContainer)" [disabled]="!events || events.length === 0">Stop Recording And Replay</button>
 
 <div #replayContainer></div>
-<button class="btn btn-dark" (click)="replay(replayContainer)">Replay</button>
