--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-5 p-5 shadow bg-white">
-  <div class="row">
+<div class="container mt-5 px-5 py-4 shadow bg-white">
+  <div class="row mt-0">
     <h3>Recording Demo</h3>
   </div>
 
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<div class="container mt-3 bg-white shadow p-5 mb-5">
+<div class="container mt-3 bg-white shadow px-5 py-4 mb-5">
   <div class="row mb-3">
     <button class="btn btn-dark" (click)="startRecording()">start recording</button>
   </div>
